# scip

./: CMakeLists.txt  Makefile  Makefile.doit  README.md
gcg/src/: githash.c
scip/: scip.sln  scip.vcxproj  scip.vcxproj.filters
scip/src/scip/: githash.c
soplex/src/soplex/: git_hash.cpp
ug/: Makefile  ug.sln  ug.vcxproj  ug.vcxproj.filters
ug/check/: check_fscip.sh  check_parascip.sh
ug/src/ug/: githash.cpp  paraCalculationState.h  paraCalculationStateMpi.cpp  paraCalculationStateMpi.h  paraCalculationStateTh.cpp  paraCalculationStateTh.h  paraComm.h  paraCommCPP11.cpp  paraCommCPP11.h  paraCommMpi.cpp  paraCommMpi.h  paraCommPth.cpp  paraCommPth.h  paraDef.h  paraDeterministicTimer.h  paraDiffSubproblem.h  paraInitialStat.h  paraInitiator.h  paraInstance.h  paraLoadCoordinator.cpp  paraLoadCoordinator.h  paraLoadCoordinatorTerminationState.cpp  paraLoadCoordinatorTerminationState.h  paraMergeNodesStructs.h  paraNode.cpp  paraNode.h  paraNodeMpi.cpp  paraNodeMpi.h  paraNodePool.h  paraNodeTh.cpp  paraNodeTh.h  paraParamSet.cpp  paraParamSet.h  paraParamSetMpi.cpp  paraParamSetMpi.h  paraParamSetTh.h  paraPthCondVar.h  paraPthLock.h  paraRacingRampUpParamSet.h  paraSolution.h  (+27 more)
ug/src/ug_scip/: fscip.cpp  parascip.cpp  scipDefaultUserPlugins.cpp  scipDiffParamSet.cpp  scipDiffParamSet.h  scipDiffParamSetMpi.cpp  scipDiffParamSetMpi.h  scipDiffParamSetTh.cpp  scipDiffParamSetTh.h  scipParaComm.h  scipParaCommMpi.cpp  scipParaCommMpi.h  scipParaCommTh.cpp  scipParaCommTh.h  scipParaDeterministicTimer.h  scipParaDiffSubproblem.cpp  scipParaDiffSubproblem.h  scipParaDiffSubproblemMpi.cpp  scipParaDiffSubproblemMpi.h  scipParaDiffSubproblemTh.h  scipParaInitialStat.cpp  scipParaInitialStat.h  scipParaInitialStatMpi.cpp  scipParaInitialStatMpi.h  scipParaInitialStatTh.cpp  (+33 more)
zimpl/: Makefile  Makefile.nmake
(+19 files in other folders)
